# haidilao-automation-monorepo

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  f13_clearing.spec  pyproject.toml  server.log.0.bz2
libs/db-client/: pyproject.toml
libs/db-client/src/db_client/: __init__.py  client.py  errors.py  migrations.py  pool.py
libs/excel-utils/: pyproject.toml
libs/excel-utils/src/excel_utils/: __init__.py  reader.py  style.py  workbook.py
libs/ipms-crawler/: pyproject.toml
libs/ipms-crawler/src/ipms_crawler/: __init__.py  __main__.py  auth.py  constants.py  errors.py  scraper.py
libs/ipms-crawler/tests/: test_ipms_basics.py  test_ipms_cli.py  test_ipms_scraper_helpers.py
libs/lark-client/: pyproject.toml
libs/lark-client/src/lark_client/: __init__.py  client.py  errors.py  notify_config.py
libs/ollama-client/: pyproject.toml
libs/ollama-client/src/ollama_client/: __init__.py  client.py
libs/pos-crawler/: pyproject.toml
libs/pos-crawler/src/pos_crawler/: __init__.py  __main__.py  _capture.py  _debug_login.py  auth.py  constants.py  dish_sales.py  dish_set_sales.py  errors.py
libs/pos-crawler/tests/: test_dish_sales.py  test_dish_set_sales.py
libs/qbi-crawler/: pyproject.toml
libs/qbi-crawler/src/qbi_crawler/: __init__.py  auth.py  constants.py  dashboard.py  errors.py
libs/qbi-crawler/tests/: e2e_overseas_set_meal.py  test_dashboard_constants.py
libs/qbi-crawler/tools/: discover_qbi_menu.py  inspect_country_dropdown.py  verify_qbi_ids.py
libs/sap-file-downloader/: pyproject.toml
libs/sap-file-downloader/src/sap_file_downloader/: __init__.py  downloader.py
libs/sap-fiori-crawler/: pyproject.toml
libs/sap-fiori-crawler/src/sap_fiori_crawler/: __init__.py  __main__.py  auth.py  constants.py  entry.py  errors.py  stocktake.py
libs/sap-fiori-crawler/tests/: test_fiori_auth.py  test_stocktake.py  test_stocktake_e2e.py  test_stocktake_entry.py
libs/sap-fiori-crawler/tests/data/: invhis_sample.json
libs/sap-gui/: f13_app.py  mb5b_app.py  pyproject.toml  zfi0156_app.py
libs/sap-gui/src/sap_gui/: __init__.py  _darwin.py  _win32.py  errors.py  export.py  navigation.py  session.py
libs/sap-gui/tests/: e2e_f13.py  e2e_f13_stepbystep.py  e2e_ksb1.py  e2e_mb5b.py  e2e_zfi0156.py  test_mb5b.py  test_mb5b_app.py  test_zfi0156.py  test_zfi0156_app.py
libs/snappy-client/: pyproject.toml
libs/snappy-client/src/snappy_client/: __init__.py  client.py
libs/vpn/: pyproject.toml
libs/vpn/src/vpn/: __init__.py  _darwin.py  _windows.py  connect.py  errors.py
libs/vpn/tests/: test_darwin.py  test_e2e.py
projects/daily-store-operation-report/: pyproject.toml
projects/daily-store-operation-report/src/daily_store_operation_report/: __init__.py  competitor.json  constants.py  dates.py  download.py  export_competitor_takeout.py  main.py  report.py  targets.json  transform.py  utils.py  validation.py
projects/daily-store-operation-report/tests/: test_dates.py  test_transform.py  test_validation.py
projects/inventory-check/: README.md  pyproject.toml
projects/inventory-check/data/: README.md  material_classification.csv  material_dish_lookup.csv  unit_conversion.csv
projects/inventory-check/src/inventory_check/: __init__.py  all_stores.py  calc_sheet.py  dates.py  db_bom.py  main.py  mb5b_parse.py  pipeline.py  references.py  report.py  stores.py  workbook.py
projects/inventory-check/tests/: test_all_stores.py  test_calc_sheet.py  test_db_bom.py  test_inventory_dates.py  test_inventory_report.py  test_mb5b_parse.py  test_pipeline.py  test_references.py  test_stores.py  test_workbook.py
projects/ksb1-accounting-check/: pyproject.toml
projects/ksb1-accounting-check-gui/: build-macos-app.sh  build-macos-dmg.sh  ksb1_gui.spec  pyproject.toml
projects/ksb1-accounting-check-gui/src/ksb1_accounting_check_gui/: __main__.py  app.py  log_handler.py  paths.py  worker.py
projects/ksb1-accounting-check/src/ksb1_accounting_check/: __init__.py  analyze.py  llm.py  main.py  prompt.md  rules.py  报表科目.xlsx
projects/ksb1-accounting-check/tests/: test_rules.py
projects/store-hours-collect/: pyproject.toml
projects/store-hours-collect/src/store_hours_collect/: __init__.py  __main__.py  main.py
projects/travel-expense-budget/: pyproject.toml
projects/travel-expense-budget/src/travel_expense_budget/: config.py  extract.py  main.py  report.py
projects/treasury-loan-watch/: pyproject.toml
projects/treasury-loan-watch/src/treasury_loan_watch/: __init__.py  __main__.py  main.py
projects/zfi0049-report/: pyproject.toml
projects/zfi0049-report/src/zfi0049_report/: __init__.py  basic_data.py  canada_pnl.py  derivative_sheets.py  dish_category.py  gross_margin.py  gross_margin_analysis.py  gross_margin_analysis_main.py  gross_margin_main.py  main.py  static_meta.py  subdivided_gp_sheet.py  table1_dish.py  table2_material.py  table3_discount.py  template_constants.py  template_fill.py
projects/zfi0049-report/tests/: test_basic_data.py  test_derivative_sheets.py  test_gross_margin_analysis.py  test_subdivided_gp_sheet.py  test_table1_dish.py  test_table2_material.py  test_table3_discount.py
server/: notify.toml  pyproject.toml
server/src/server/: __main__.py  api_keys.py  app.py  auth.py  config.py  db.py  lark_autoreply.py  notify.py  run_guard.py  scheduler.py  sheet_screenshot.py
server/src/server/commands/: __init__.py  base.py  competitor_takeout_report.py  daily_report.py  f13_clearing.py  gross_margin_report.py  ksb1.py  store_hours_collect.py  travel_budget.py  treasury_loan_watch.py  zfi0049_report.py
server/src/server/routes/: __init__.py  (+11 more)
server/tests/: conftest.py  test_admin_bom.py  test_api_keys.py  test_auth.py  test_auth_extended.py  test_commands.py  test_config.py  test_config_fields.py  test_db.py  test_e2e.py  test_github_webhook.py  test_notify.py  test_notify_config.py  test_remaining_coverage.py  test_routes_commands.py  test_routes_files.py  test_routes_jobs.py  test_routes_reports.py  test_routes_runs.py  test_routes_tools.py  test_run_guard.py  test_runs_notify.py  test_scheduler.py  test_server_e2e.py
(+73 files in other folders)
