[project]
name = "haidilao-automation-monorepo"
version = "0.1.0"
description = "Monorepo for Haidilao paperwork automations"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["libs/*", "projects/*", "server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
