[project]
name = "haidilao-automation-monorepo"
version = "0.1.0"
description = "Monorepo for Haidilao paperwork automations"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["libs/*", "projects/*", "server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that trigger real automation (SAP GUI, QBI). Run with: pytest -m e2e",
]
addopts = "-m 'not e2e'"
