[project]
name = "server"
version = "0.1.0"
description = "HTTP server for Haidilao automation monorepo — triggers commands, serves output files, runs cron jobs"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "apscheduler>=3.10.0,<4",
    "pydantic-settings>=2.0.0",
    "lark-client",
    "db-client",
    "itsdangerous>=2.1",
    "httpx>=0.27",
    "minio>=7.2.20",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests that trigger real automation (SAP GUI, VPN)"]
addopts = "-m 'not e2e'"

[tool.uv.sources]
lark-client = { workspace = true, editable = true }
db-client = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
