[project]
name = "db-client"
version = "0.1.0"
description = "PostgreSQL client for Haidilao automation — connection pool, migrations, typed queries"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary,pool]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_client"]
