[project]
name = "excel-utils"
version = "0.1.0"
description = "Shared Excel generation utilities for Haidilao automations"
requires-python = ">=3.13"
dependencies = ["openpyxl>=3.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_utils"]
