[project]
name = "ipms-crawler"
version = "0.1.0"
description = "Web crawler for Haidilao IPMS (ipms-global.superhi-tech.com) — overseas BOM export via Playwright"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40",
    "vpn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipms_crawler"]

[tool.uv.sources]
vpn = { workspace = true }
