[project]
name = "ollama-client"
version = "0.1.0"
description = "Lightweight Ollama API client for local LLM inference"
requires-python = ">=3.13"
dependencies = ["ollama>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_client"]
