[project]
name = "pos-crawler"
version = "0.1.0"
description = "Web crawler for Haidilao POS (pos.superhi-tech.com) via Playwright"
requires-python = ">=3.13"
dependencies = ["playwright>=1.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pos_crawler"]
