[project]
name = "qbi-crawler"
version = "0.1.0"
description = "Web crawler for Haidilao Quick BI dashboards via Playwright"
requires-python = ">=3.13"
dependencies = ["playwright>=1.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qbi_crawler"]
