[project]
name = "sap-file-downloader"
version = "0.1.0"
description = "Shared SAP file download automation"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sap_file_downloader"]
