[project]
name = "sap-fiori-crawler"
version = "0.1.0"
description = "Web crawler for SAP Fiori (sgpfioriweb.superhi-tech.com) via Playwright"
requires-python = ">=3.13"
dependencies = ["playwright>=1.40", "openpyxl>=3.1.0", "python-dotenv>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sap_fiori_crawler"]
