[project]
name = "sap-gui"
version = "0.1.0"
description = "Shared SAP GUI automation (Windows COM + macOS Scripting Console)"
requires-python = ">=3.13"
dependencies = ["pywin32>=306; sys_platform == 'win32'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sap_gui"]
