[project]
name = "sap-gui"
version = "0.1.0"
description = "Shared SAP GUI automation (Windows COM + macOS Scripting Console)"
requires-python = ">=3.13"
dependencies = ["pywin32>=306; sys_platform == 'win32'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sap_gui"]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests that trigger real automation (SAP GUI)"]
addopts = "-m 'not e2e'"
