[project]
name = "snappy-client"
version = "0.1.0"
description = "API client for Snappy POS (gosnappy.io) — sales data retrieval"
requires-python = ">=3.13"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snappy_client"]
