[project]
name = "vpn"
version = "0.1.0"
description = "SealSuite VPN middleware — ensures VPN is connected before automation runs"
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-quartz>=12.1 ; sys_platform == 'darwin'",
    "pywinauto>=0.6.9; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpn"]
