[project]
name = "vpn"
version = "0.1.0"
description = "SealSuite VPN middleware — ensures VPN is connected before automation runs"
requires-python = ">=3.13"
dependencies = [
    "pywinauto>=0.6.9; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpn"]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests that trigger real automation (VPN/CorpLink)"]
addopts = "-m 'not e2e'"
