[project]
name = "daily-store-operation-report"
version = "0.1.0"
description = "Daily store operation report automation — downloads QBI data and generates Excel report"
requires-python = ">=3.13"
dependencies = [
    "qbi-crawler",
    "excel-utils",
    "vpn",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_store_operation_report"]

[tool.uv.sources]
qbi-crawler = { workspace = true }
excel-utils = { workspace = true }
vpn = { workspace = true }
