[project]
name = "inventory-check"
version = "0.1.0"
description = "Monthly stocktake report (盘点结果) — combines POS dish-sales, SAP Fiori 盘点报表, and (TODO) MB5B."
requires-python = ">=3.13"
dependencies = [
    "db-client",
    "pos-crawler",
    "sap-fiori-crawler",
    "sap-gui",
    "vpn",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inventory_check"]

[tool.uv.sources]
db-client = { workspace = true }
pos-crawler = { workspace = true }
sap-fiori-crawler = { workspace = true }
sap-gui = { workspace = true }
vpn = { workspace = true }
