[project]
name = "store-hours-collect"
version = "0.1.0"
description = "Daily store working-hour data collection — creates monthly Feishu sheets and fills turnover/table data"
requires-python = ">=3.13"
dependencies = [
    "lark-client",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
lark-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/store_hours_collect"]
