[project]
name = "travel-expense-budget"
version = "0.1.0"
description = "Travel expense budget report — 差旅费预算明细"
requires-python = ">=3.13"
dependencies = [
    "sap-gui",
    "vpn",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_expense_budget"]

[tool.uv.sources]
sap-gui = { workspace = true }
vpn = { workspace = true }
