[project]
name = "treasury-loan-watch"
version = "0.1.0"
description = "Daily monitor for TREASURY inter-company loan maturities — alerts via Lark"
requires-python = ">=3.13"
dependencies = [
    "lark-client",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
lark-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treasury_loan_watch"]
