[project]
name = "zfi0049-report"
version = "0.1.0"
description = "SAP ZFI0049 export report"
requires-python = ">=3.13"
dependencies = [
    "sap-gui",
    "vpn",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zfi0049_report"]

[tool.uv.sources]
sap-gui = { workspace = true }
vpn = { workspace = true }
